Closed Bug 1266013 Opened 8 years ago Closed 8 years ago

B2GOS: GonkVideoDecoderManager.cpp:225:54: error: 'picture' was not declared in this scope

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gwagner, Assigned: jya)

References

Details

Attachments

(1 file)

And other compilation issues:


/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:132:52: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:225:54: error: 'picture' was not declared in this scope
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:235:80: error: no matching function for call to 'mozilla::GonkVideoDecoderManager::CreateVideoDataFromDataBuffer(android::MediaBuffer*&, nsIntRect)'
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:430:46: error: 'mInfo' was not declared in this scope
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:499:46: error: 'mInfo' was not declared in this scope
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:668:34: error: 'class mozilla::VideoInfo' has no member named 'mCodecSpecificData'
/home/worker/workspace/gecko/dom/media/platforms/gonk/GonkVideoDecoderManager.cpp:669:34: error: 'class mozilla::VideoInfo' has no member named 'mCodecSpecificData'
Blocks: 1243538, 1245091
Assignee: nobody → jyavenard
Comment on attachment 8743215 [details]
MozReview Request: Bug 1266013: Fix Firefox OS compile errors. r?gerald

https://reviewboard.mozilla.org/r/47653/#review44431
Attachment #8743215 - Flags: review?(gsquelart) → review+
https://hg.mozilla.org/mozilla-central/rev/d0b697ec5a8e
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.