Bug 1266013: Fix Firefox OS compile errors. r=gerald

MozReview-Commit-ID: 2XLFe1ZHS5z